force-app/main/default/objects/plaunch__activity__c/plaunch__activity__c.object-meta.xml
<CustomObject>
    <description>Stores all pipelaunch related activities</description>
    <label>PipeLaunch Activity</label>
    <nameField>
        <label>PipeLaunch Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PipeLaunch Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>