force-app/main/default/objects/plaunch__activity__c/fields/plaunch__contactId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__contactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PipeLaunch Activities</relationshipLabel>
    <relationshipName>PipeLaunch_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>