force-app/main/default/objects/plaunch__activity__c/fields/plaunch__lastContact__c.field-meta.xml
<CustomField>
    <fullName>plaunch__lastContact__c</fullName>
    <description>Last time this contact/lead has been contacted via PipeLaunch</description>
    <label>Last Contact</label>
    <type>DateTime</type>
</CustomField>