force-app/main/default/objects/plaunch__activity__c/fields/plaunch__lastContactStatus__c.field-meta.xml
<CustomField>
    <fullName>plaunch__lastContactStatus__c</fullName>
    <description>Stores the last status for a contacted contact/lead</description>
    <label>Last contact status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>plaunch__contactStatus</valueSetName>
    </valueSet>
</CustomField>