force-app/main/default/objects/plaunch__activity__c/fields/plaunch__leadId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__leadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>PipeLaunch Activities</relationshipLabel>
    <relationshipName>PipeLaunch_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>