force-app/main/default/objects/plaunch__activity__c/fields/plaunch__nextFollowUp__c.field-meta.xml
<CustomField>
    <fullName>plaunch__nextFollowUp__c</fullName>
    <description>Optional field for the contact/lead contacted on PipeLaunch. Datetime for next contact</description>
    <label>Next follow up</label>
    <type>DateTime</type>
</CustomField>