force-app/main/default/objects/plaunch__activity__c/fields/plaunch__nextMeeting__c.field-meta.xml
<CustomField>
    <fullName>plaunch__nextMeeting__c</fullName>
    <description>Keeps datetime for next meeting for the contact/lead in PipeLaunch</description>
    <label>Next meeting</label>
    <type>DateTime</type>
</CustomField>